<resources>
    <string name="app_name">Treksome</string>
    <string name="welcome_to_treksome">Welcome to Treksome</string>
    <string name="upload_image">Upload image</string>
    <string name="choose_image">choose image</string>
    <string name="x">X</string>
    <string name="view_all">View all</string>
    <string name="articles">Articles</string>
    <string name="photos">Photos</string>
    <string name="events">Events</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="upload">Upload</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="choose_file">Choose file</string>
</resources>
