<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Animation"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:id="@+id/XmlChooseImage"/>

        <Button
            style="@android:style/Animation"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:id="@+id/XmlUploadImage"/>

    </LinearLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:id="@+id/XmlImage"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name" />

    <br.com.bloder.magic.view.MagicButton
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/XmlGoogleSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:button_icon="@drawable/g2"
        app:button_icon_height="25dp"
        app:button_icon_width="25dp"
        app:hide_text_color="#000000"
        app:hide_text="Sign out"
        app:magic_button_size="50dp" />

</LinearLayout>